fixed horizontal center align galleries

--- a/templates/siegeengine2/css/foundation.css
+++ b/templates/siegeengine2/css/foundation.css
@@ -2869,7 +2869,7 @@ label.error {
     font-size: 1em;
     width: 100%;
     text-transform: uppercase;
-    padding: 0px 15px;
+    padding: 4px 15px;
     height: 25px;
     line-height: 25px;
     width: 100%;
@@ -2880,7 +2880,7 @@ label.error {
 
     .top-bar .toggle-topbar a {
       width: 100%;
-      color: #222222;
+      /* color: #222222; */
       text-transform: uppercase;
       /* font-size: 0.8125em; */
       /* font-weight: bold; */
