--- a/templates/siegeengine2/html/jw_sigpro/Classic/css/template.css
+++ b/templates/siegeengine2/html/jw_sigpro/Classic/css/template.css
@@ -14,7 +14,7 @@ table.contentpaneopen {
 	width:100%
 }
 
-li.sigFreeClear {
+li.sigFreeClearTemp {
 	clear:both;
 	float:none!important;
 	height:0!important;
@@ -31,50 +31,58 @@ ul.sigFreeClassic {
 	/* margin:8px auto!important; */
 	/* padding:8px 0!important; */
 	list-style:none;
-	clear:both;
-	overflow:hidden
+	/* clear:both; */
+	/* overflow:hidden */
+  text-align: center;
+}
+@media screen and (max-width: 940px){
+  ul.sigFreeClassic{
+    margin-top: 37px;
+  }
 }
 
 ul.sigFreeClassic.singleThumbGallery {
-	margin:0!important;
-	padding:8px 0!important;
-	list-style:none!important;
-	float:left
+	/* margin:0!important; */
+	/* padding:8px 0!important; */
+	/* list-style:none!important; */
+	/* float:left; */
 }
 
 /* Thumbnail */
 ul.sigFreeClassic li.sigFreeThumb {
-	float:left;
+	/* float:left; */
 	background:#fff!important;
-	margin:5px;
+	margin:5px 0;
 	padding:0;
-	list-style:none!important
+	list-style:none!important;
+  display: inline-block;
+  /* border: solid 0.05em; */
 }
 
 /* width:33%; to force columns */
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkOuterWrapper {
-	display:block;
-	float:left;
-	margin:0;
-	padding:0 5px 5px 0;
+	/* display:block; */
+	/* float:left; */
+	/* margin:0; */
+	/* padding:0 5px 5px 0; */
 	/* background:url(../images/shadowAlpha.png) no-repeat right bottom */
 }
 
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
-	display:block;
-	float:left;
-	margin:-5px 0 0 -5px;
-	padding:4px;
+	/* display:block; */
+	/* float:left; */
+	/* margin:-5px 0 0 -5px; */
+	/* padding:4px; */
 	/* border:1px solid #ccc */
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
-	position:relative;
-	float:left;
-	display:block;
-	padding:0;
-	margin:0;
-	border:none
+	/* position:relative; */
+	/* float:left; */
+	/* display:block; */
+	/* padding:0; */
+	/* margin:0; */
+	/* border:none */
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink {
@@ -87,28 +95,28 @@ ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink img.sigFreeImg,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover img.sigFreeImg {
-	display:block;
+	/* display:block; */
   /* width: 100%; */
 	/* height:100%; */
-	padding:0;
-	margin:0;
-	border:none;
-	background-repeat:no-repeat;
-	background-position:50% 82%
+	/* padding:0; */
+	/* margin:0; */
+	/* border:none; */
+	/* background-repeat:no-repeat; */
+	/* background-position:50% 82% */
 }
 
 /* Caption */
 ul.sigFreeClassic span.sigFreePseudoCaption,ul.sigFreeClassic span.sigFreeCaption {
-	display:block;
-	position:absolute;
-	bottom:0;
-	left:0;
-	right:0;
-	text-align:center;
-	padding:2px 4px;
-	font-family:Arial,Helvetica,sans-serif;
-	font-size:11px;
-	font-weight:700
+	/* display:block; */
+	/* position:absolute; */
+	/* bottom:0; */
+	/* left:0; */
+	/* right:0; */
+	/* text-align:center; */
+	/* padding:2px 4px; */
+	/* font-family:Arial,Helvetica,sans-serif; */
+	/* font-size:11px; */
+	/* font-weight:700 */
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink span.sigFreePseudoCaption {
@@ -138,16 +146,16 @@ span.sigFreePopupCaption {
 
 a.sigFreeDownloadLink,a.sigFreeDownloadLink:hover {
 	background:url(../images/disk.png) no-repeat left center;
-	padding:4px 0 4px 20px
+	/* padding:4px 0 4px 20px */
 }
 
 div.sigFreeModulePosition {
-	text-align:center;
-	border-top:1px solid #ccc;
-	border-bottom:1px solid #ccc;
-	padding:4px;
-	margin:8px 0;
-	background:#ffd
+	/* text-align:center; */
+	/* border-top:1px solid #ccc; */
+	/* border-bottom:1px solid #ccc; */
+	/* padding:4px; */
+	/* margin:8px 0; */
+	/* background:#ffd */
 }
 
 /* IE specific styling: Use "body.sigFreeIsIEX element {}" - where X is 6, 7 or 8 - to target elements for these browser versions only */
@@ -155,26 +163,26 @@ body.sigFreeIsIE6 {
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkOuterWrapper {
-	background:url(../images/shadow.gif) no-repeat right bottom;
-	padding:0 5px 5px 0
-  padding: auto;
+	/* background:url(../images/shadow.gif) no-repeat right bottom; */
+	/* padding:0 5px 5px 0 */
+  /* padding: auto; */
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
-	margin:0
+	/* margin:0 */
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreeCaption {
-	width:100%;
-	padding:2px 0;
-	cursor:pointer
+	/* width:100%; */
+	/* padding:2px 0; */
+	/* cursor:pointer */
 }
 
 body.sigFreeIsIE7 {
 }
 
 body.sigFreeIsIE7 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink,body.sigFreeIsIE7 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
-	float:left
+	/* float:left */
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE7 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE8 ul.sigFreeClassic span.sigFreePseudoCaption {
