--- a/templates/siegeengine2/html/jw_sigpro_multi/Classic/css/template.css
+++ b/templates/siegeengine2/html/jw_sigpro_multi/Classic/css/template.css
@@ -25,66 +25,53 @@ table.contentpaneopen {
   flo
 }
 
-li.sigFreeClearTemp {
-	clear:both;
-	float:none!important;
-	height:0!important;
-	line-height:0!important;
-	border:none!important;
-	background:none!important;
-	width:auto;
-	margin:0!important;
-	padding:0!important
+li.sigFreeClear {
+	/* clear:both; */
+	/* float:none!important; */
+	/* height:0!important; */
+	/* line-height:0!important; */
+	/* border:none!important; */
+	/* background:none!important; */
+	/* width:auto; */
+	/* margin:0!important; */
+	/* padding:0!important */
 }
 
 /* Container */
 ul.sigFreeClassic {
-	margin:8px auto!important;
-	padding:8px auto!important;
-  /* margin: auto; */
-	list-style:none;
-	clear:both;
-	overflow:hidden;
-  /* max-width: 970px; */
-  /* width: 968px; */
-  /* display: block; */
-  /* float: left; */
-  /* position: relative; */
-  /* left: -50%; */
-  /* text-align: center; */
+  /* width: 1000px; */
+  /* display: inline-block; */
+  text-align: center;
+  list-style: none;
 }
 
-ul.sigFreeClassic.singleThumbGallery {
-	margin:0!important;
-	padding:8px 0!important;
-	list-style:none!important;
-	float:left
+@media screen and (max-width: 940px){
+  ul.sigFreeClassic{
+    margin-top: 37px;
+  }
 }
 
 /* Thumbnail */
 ul.sigFreeClassic li.sigFreeThumb {
-	float:left;
 	background:#fff!important;
-	/* margin:-1px; */
+	margin: 3px 0;
 	/* padding:0; */
-	list-style:none!important
+	list-style:none!important;
   display: inline-block;
 }
 
 /* width:33%; to force columns */
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkOuterWrapper {
-	display:block;
-	float:left;
-  position: relative;
-	padding:2% 1%;
+	/* display:block; */
+  /* position: relative; */
+	/* padding:2% 1%; */
 	/* background:url(../images/shadowAlpha.png) no-repeat right bottom */
 }
 
 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
-	display:block;
-	float:left;
+	/* display:block; */
 	/* margin:-5px 0 0 -5px; */
-	padding:1px;
+	/* padding:1px; */
 	/* border:1px solid #ccc */
 }
 /* @media screen and (min-width:1005px){ */
@@ -102,12 +89,11 @@ ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
 /*  */
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
-	position:relative;
-	float:left;
-	display:block;
-	padding:0;
-	margin:0;
-	border:none
+	/* position:relative; */
+	/* display:block; */
+	/* padding:0; */
+	/* margin:0; */
+	/* border:none */
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink {
@@ -120,28 +106,28 @@ ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink img.sigFreeImg,ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover img.sigFreeImg {
-	display:block;
-	width:100%;
-	height:100%;
-	padding:0;
-	margin:0;
-	border:none;
-	background-repeat:no-repeat;
+	/* display:block; */
+	/* width:100%; */
+	/* height:100%; */
+	/* padding:0; */
+	/* margin:0; */
+	/* border:none; */
+	/* background-repeat:no-repeat; */
 	/* background-position:50% 50% */
 }
 
 /* Caption */
 ul.sigFreeClassic span.sigFreePseudoCaption,ul.sigFreeClassic span.sigFreeCaption {
-	display:block;
-	position:absolute;
-	bottom:0;
-	left:0;
-	right:0;
-	text-align:center;
-	padding:2px 4px;
-	font-family:Arial,Helvetica,sans-serif;
-	font-size:11px;
-	font-weight:700
+	/* display:block; */
+	/* position:absolute; */
+	/* bottom:0; */
+	/* left:0; */
+	/* right:0; */
+	/* text-align:center; */
+	/* padding:2px 4px; */
+	/* font-family:Arial,Helvetica,sans-serif; */
+	/* font-size:11px; */
+	/* font-weight:700 */
 }
 
 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink span.sigFreePseudoCaption {
@@ -163,24 +149,24 @@ ul.sigFreeClassic span.sigFreePseudoCaption b {
 
 /* Popup */
 span.sigFreePopupCaption {
-	font-weight:700;
-	color:#C63C13;
-	font-size:13px;
-	font-family:Georgia,"Times New Roman",Times,serif
+	/* font-weight:700; */
+	/* color:#C63C13; */
+	/* font-size:13px; */
+	/* font-family:Georgia,"Times New Roman",Times,serif */
 }
 
 a.sigFreeDownloadLink,a.sigFreeDownloadLink:hover {
-	background:url(../images/disk.png) no-repeat left center;
-	padding:4px 0 4px 20px
+	/* background:url(../images/disk.png) no-repeat left center; */
+	/* padding:4px 0 4px 20px */
 }
 
 div.sigFreeModulePosition {
-	text-align:center;
-	border-top:1px solid #ccc;
-	border-bottom:1px solid #ccc;
-	padding:4px;
-	margin:8px 0;
-	background:#ffd
+	/* text-align:center; */
+	/* border-top:1px solid #ccc; */
+	/* border-bottom:1px solid #ccc; */
+	/* padding:4px; */
+	/* margin:8px 0; */
+	/* background:#ffd */
 }
 
 /* IE specific styling: Use "body.sigFreeIsIEX element {}" - where X is 6, 7 or 8 - to target elements for these browser versions only */
@@ -188,26 +174,25 @@ body.sigFreeIsIE6 {
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkOuterWrapper {
-	background:url(../images/shadow.gif) no-repeat right bottom;
-	padding:0 5px 5px 0
-  padding: auto;
+	/* background:url(../images/shadow.gif) no-repeat right bottom; */
+	/* padding:0 5px 5px 0 */
+  /* padding: auto; */
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic li.sigFreeThumb span.sigFreeLinkWrapper {
-	margin:0
+	/* margin:0 */
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreeCaption {
-	width:100%;
-	padding:2px 0;
-	cursor:pointer
+	/* width:100%; */
+	/* padding:2px 0; */
+	/* cursor:pointer */
 }
 
 body.sigFreeIsIE7 {
 }
 
 body.sigFreeIsIE7 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink,body.sigFreeIsIE7 ul.sigFreeClassic li.sigFreeThumb a.sigFreeLink:hover {
-	float:left
 }
 
 body.sigFreeIsIE6 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE7 ul.sigFreeClassic span.sigFreePseudoCaption,body.sigFreeIsIE8 ul.sigFreeClassic span.sigFreePseudoCaption {
